--- a/arch/arm/configs/imx7d_televic_defconfig
+++ b/arch/arm/configs/imx7d_televic_defconfig
@@ -36,7 +36,9 @@ CONFIG_CPUFREQ_DT=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 # CONFIG_BLK_DEV_BSG is not set
+# CONFIG_MQ_IOSCHED_DEADLINE is not set
 # CONFIG_MQ_IOSCHED_KYBER is not set
+CONFIG_IOSCHED_BFQ=y
 CONFIG_BINFMT_MISC=y
 CONFIG_CMA=y
 CONFIG_NET=y
